--- a/rollingdice.css
+++ b/rollingdice.css
@@ -1,10 +1,27 @@
 h1 {
-    align-self:center
+    height: 100%;
+    width: 100%;
+    align-self:center;
+}
+div {
+    height: 50%;
+    width: 50%;
+}
+#div1 {
+    align-self:start;
+}
+#div2 {
+    align-self:end;
 }
 p.Dice {
-    font-size: 48
+    font-size: 100;
 }
-#1 {
-    text-align:center
+#Dice1 {
+    text-align:center;
 }
-
+#Dice2 {
+    text-align:center;
+}
+p.Display{
+    font-size: 50;
+}
